--- a/layouts/index.html
+++ b/layouts/index.html
@@ -153,8 +153,9 @@
 {{ if eq "text_and_form" .type }}
 <div class="section relative bg-cover bg-no-repeat bg-center"
     style="{{ if .background_color }}background-color:{{ .background_color }}{{ end }};{{ if .background_image }}background-image:url({{ .background_image }}){{ end }}">
+    <div class="absolute left-0 right-0 bottom-0 top-0 z-10" style="background-color:{{ .background_image_overlay | safeCSS }}"></div>
     <div>
-        <div class="container mx-auto">
+        <div class="container mx-auto relative z-20">
             <div class="md:flex md:items-center">
                 <div class="md:w-1/2">
                     <div class="content" style="{{ if .body_color }}color:{{ .body_color }}{{ end }}">{{.body |
@@ -162,9 +163,6 @@
                 </div>
                 <div class="md:w-1/2">
                     <div class="text-form">
-                        {{ with .form.heading }}
-                        <h2 class="text-2xl md:text-3xl font-semibold">{{ . }}</h2>
-                        {{ end }}
                         {{ with .form.body }}
                         <div class="md-content mt-4">
                             {{ . | markdownify }}
@@ -182,7 +180,7 @@
                         </script>
                         {{ else }}
                         <form name="Website Contact Form Widget" method="POST" netlify-honeypot="bot-field"
-                        data-netlify="true" class="grid grid-cols-6 gap-4 mt-10" action="/thank-you">
+                        data-netlify="true" class="grid grid-cols-6 gap-4 mt-10 relative" action="/thank-you">
                         <input name="bot-field" type="hidden" />
                         <input type="hidden" name="Subject" value="Website Contact Form Widget">
                         <input name="Source" type="hidden" value="{{ .Permalink }}" />
