--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -1,120 +1,122 @@
 {{ $branding := .Site.Data.branding }}
 {{ $profile := .Site.Data.profile }}
-<div id="top-bar">
-  <div class="container mx-auto">
-    <div class="md:flex justify-end text-right">
-      <div class="w-full py-2">
-        <ul class="flex justify-end space-x-6">
-          {{ if $profile.contact_information.contact.direct }}<li><a href="tel:{{ $profile.contact_information.contact.direct }}"><span class="font-medium">Direct:</span> {{ $profile.contact_information.contact.direct }}</a>
-          </li>{{ end }}
-          {{ if $profile.contact_information.contact.office }}<li class="hidden md:block"><a href="tel:{{ $profile.contact_information.contact.office }}"><span class="font-medium">Office:</span> {{ $profile.contact_information.contact.office }}</a>
-          </li>{{ end }}
-          {{ if $profile.contact_information.contact.email }}<li><a href="mailto:{{ $profile.contact_information.contact.email }}"><span class="font-medium">Email:</span> {{ $profile.contact_information.contact.email }}</a>
-          </li>{{ end }}
-      </ul>
+<div class="{{ if .Site.Data.navigation.header_color }}{{ else }}absolute left-0 right-0 z-50{{ end }}">
+  <div id="top-bar">
+    <div class="container mx-auto">
+      <div class="md:flex justify-end text-right">
+        <div class="w-full py-2">
+          <ul class="flex justify-end space-x-6">
+            {{ if $profile.contact_information.contact.direct }}<li><a href="tel:{{ $profile.contact_information.contact.direct }}"><span class="font-medium">Direct:</span> {{ $profile.contact_information.contact.direct }}</a>
+            </li>{{ end }}
+            {{ if $profile.contact_information.contact.office }}<li class="hidden md:block"><a href="tel:{{ $profile.contact_information.contact.office }}"><span class="font-medium">Office:</span> {{ $profile.contact_information.contact.office }}</a>
+            </li>{{ end }}
+            {{ if $profile.contact_information.contact.email }}<li><a href="mailto:{{ $profile.contact_information.contact.email }}"><span class="font-medium">Email:</span> {{ $profile.contact_information.contact.email }}</a>
+            </li>{{ end }}
+        </ul>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<header>
-  <nav class="flex items-center justify-between p-6 lg:px-8 container mx-auto" aria-label="Global">
-    <div class="flex lg:flex-1">
-      <a href="/" class="-m-1.5 p-1.5">
-        <span class="sr-only">{{ $profile.company_name }}</span>
-        <img src="{{ $branding.branding_logo }}" alt="{{ $profile.company_name }}" width="{{ if $branding.branding_logo_width }}{{ $branding.branding_logo_width }}{{ else }}100{{ end }}">
-      </a>
-    </div>
-    <div class="flex lg:hidden">
-      <button id="openButton" type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 !bg-transparent flex-col space-y-1">
-        <span class="sr-only">Open main menu</span>
-        <span class="w-6 h-[2px] bg-black"></span>
-        <span class="w-6 h-[2px] bg-black"></span>
-        <span class="w-6 h-[2px] bg-black"></span>
-    </button>
-    
-    </div>
-    <div id="menuLinks" class="hidden lg:flex lg:gap-x-12">
-      <!-- Hugo Template Logic for Menu -->
-      {{ range $.Site.Data.navigation.nav_items }}
-      {{ if .sub_items }}
-        <div class="relative group has-dropdown ml-4"> <!-- Added ml-4 for spacing -->
-          <a href="#" class="text-sm font-semibold leading-6 text-white group flex items-center py-4">
-            {{ .label }} 
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 ml-1">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
-            </svg>
-          </a>
-          <ul class="dropdown-menu absolute hidden z-50 bg-white shadow-lg w-60 top-14 left-0 opacity-0 translate-y-2 group-hover:opacity-100 group-hover:translate-y-0 transition-opacity duration-300 ease-in-out group-hover:duration-500 group-hover:ease-in-out animate-slide-in">
-            {{ range .sub_items }}
-              <li class="border-b last:border-b-0 hover:bg-gray-300 px-2 transition-all duration-500">
-                <a href="{{ .path }}" class="text-sm leading-6 !text-black block hover:pl-1 py-3 transition-all duration-500">{{ .label }}</a>
-              </li>
-            {{ end }}
-          </ul>
-        </div>
-      {{ else }}
-        <a href="{{ .path }}" class="text-sm font-semibold leading-6 text-white py-4">{{ .label }}</a>
-      {{ end }}
-    {{ end }}
-    
-      <!-- End Hugo Template Logic for Menu -->
-    </div>
-    
-    <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-      <a href="{{ .Site.Data.navigation.call_to_action_link }}" class="primary-button">{{ .Site.Data.navigation.call_to_action_text }}</a>
-    </div>
-  </nav>
-
-<!-- Mobile Menu -->
-<div id="mobileMenu" class="fixed z-[200] inset-y-0 left-0 w-72 bg-white transform -translate-x-full transition-transform duration-300 ease-in-out">
-  <div class="flex items-center justify-between p-4">
-        <span class="sr-only">{{ $profile.company_name }}</span>
-        <img src="{{ $branding.branding_logo }}" alt="{{ $profile.company_name }}" width="{{ if $branding.branding_logo_width }}{{ $branding.branding_logo_width }}{{ else }}100{{ end }}">
-      <button id="closeButton" class="!bg-transparent text-black">
-          <span class="sr-only">Close menu</span>
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-          </svg>
+  <header class="{{ if .Site.Data.navigation.header_color }}shadow-lg{{ else }}{{ end }}">
+    <nav class="flex items-center justify-between p-6 lg:px-8 container mx-auto" aria-label="Global">
+      <div class="flex lg:flex-1">
+        <a href="/" class="-m-1.5 p-1.5">
+          <span class="sr-only">{{ $profile.company_name }}</span>
+          <img src="{{ $branding.branding_logo }}" alt="{{ $profile.company_name }}" width="{{ if $branding.branding_logo_width }}{{ $branding.branding_logo_width }}{{ else }}100{{ end }}">
+        </a>
+      </div>
+      <div class="flex lg:hidden">
+        <button id="openButton" type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 !bg-transparent flex-col space-y-1">
+          <span class="sr-only">Open main menu</span>
+          <span class="w-6 h-[2px] bg-black"></span>
+          <span class="w-6 h-[2px] bg-black"></span>
+          <span class="w-6 h-[2px] bg-black"></span>
       </button>
+      
+      </div>
+      <div id="menuLinks" class="hidden lg:flex lg:gap-x-12">
+        <!-- Hugo Template Logic for Menu -->
+        {{ range $.Site.Data.navigation.nav_items }}
+        {{ if .sub_items }}
+          <div class="relative group has-dropdown ml-4"> <!-- Added ml-4 for spacing -->
+            <a href="#" class="text-sm font-semibold leading-6 text-white group flex items-center py-4">
+              {{ .label }} 
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 ml-1">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+              </svg>
+            </a>
+            <ul class="dropdown-menu absolute hidden z-50 bg-white shadow-lg w-60 top-14 left-0 opacity-0 translate-y-2 group-hover:opacity-100 group-hover:translate-y-0 transition-opacity duration-300 ease-in-out group-hover:duration-500 group-hover:ease-in-out animate-slide-in">
+              {{ range .sub_items }}
+                <li class="border-b last:border-b-0 hover:bg-gray-300 px-2 transition-all duration-500">
+                  <a href="{{ .path }}" class="text-sm leading-6 !text-black block hover:pl-1 py-3 transition-all duration-500">{{ .label }}</a>
+                </li>
+              {{ end }}
+            </ul>
+          </div>
+        {{ else }}
+          <a href="{{ .path }}" class="text-sm font-semibold leading-6 text-white py-4">{{ .label }}</a>
+        {{ end }}
+      {{ end }}
+      
+        <!-- End Hugo Template Logic for Menu -->
+      </div>
+      
+      <div class="hidden lg:flex lg:flex-1 lg:justify-end">
+        <a href="{{ .Site.Data.navigation.call_to_action_link }}" class="primary-button">{{ .Site.Data.navigation.call_to_action_text }}</a>
+      </div>
+    </nav>
+  
+  <!-- Mobile Menu -->
+  <div id="mobileMenu" class="fixed z-[200] inset-y-0 left-0 w-72 bg-white transform -translate-x-full transition-transform duration-300 ease-in-out">
+    <div class="flex items-center justify-between p-4">
+          <span class="sr-only">{{ $profile.company_name }}</span>
+          <img src="{{ $branding.branding_logo }}" alt="{{ $profile.company_name }}" width="{{ if $branding.branding_logo_width }}{{ $branding.branding_logo_width }}{{ else }}100{{ end }}">
+        <button id="closeButton" class="!bg-transparent text-black">
+            <span class="sr-only">Close menu</span>
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+            </svg>
+        </button>
+    </div>
+    <nav class="p-4">
+        <ul>
+            <!-- Hugo Template Logic for Mobile Menu -->
+            {{ range $.Site.Data.navigation.nav_items }}
+            {{ if .sub_items }}
+            <li class="relative group"> <!-- Added ml-4 for spacing -->
+                <a href="#" class="text-sm font-semibold leading-6 group flex items-center py-4" onclick="toggleDropdown(this)">
+                    {{ .label }}
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                        class="w-4 h-4 ml-1">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                    </svg>
+                </a>
+                <ul
+                    class="dropdown-menu z-50 w-60 top-0 left-0 translate-x-0 hidden">
+                    {{ range .sub_items }}
+                    <li class="border-b last:border-b-0 hover:bg-gray-300 px-2">
+                        <a href="{{ .path }}"
+                            class="text-sm font-semibold leading-6 block hover:pl-1 py-3">{{ .label }}</a>
+                    </li>
+                    {{ end }}
+                </ul>
+            </li>
+            {{ else }}
+            <li class="py-4">
+                <a href="{{ .path }}" class="text-sm font-semibold leading-6 text-black py-4">{{ .label }}</a>
+            </li>
+            {{ end }}
+  
+            {{ end }}
+            <!-- End Hugo Template Logic for Mobile Menu -->
+            <li class="mt-10">
+              <a href="{{ .Site.Data.navigation.call_to_action_link }}" class="primary-button !block !text-center">{{ .Site.Data.navigation.call_to_action_text }}</a>
+            </li>
+        </ul>
+    </nav>
   </div>
-  <nav class="p-4">
-      <ul>
-          <!-- Hugo Template Logic for Mobile Menu -->
-          {{ range $.Site.Data.navigation.nav_items }}
-          {{ if .sub_items }}
-          <li class="relative group"> <!-- Added ml-4 for spacing -->
-              <a href="#" class="text-sm font-semibold leading-6 group flex items-center py-4" onclick="toggleDropdown(this)">
-                  {{ .label }}
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-                      class="w-4 h-4 ml-1">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
-                  </svg>
-              </a>
-              <ul
-                  class="dropdown-menu z-50 w-60 top-0 left-0 translate-x-0 hidden">
-                  {{ range .sub_items }}
-                  <li class="border-b last:border-b-0 hover:bg-gray-300 px-2">
-                      <a href="{{ .path }}"
-                          class="text-sm font-semibold leading-6 block hover:pl-1 py-3">{{ .label }}</a>
-                  </li>
-                  {{ end }}
-              </ul>
-          </li>
-          {{ else }}
-          <li class="py-4">
-              <a href="{{ .path }}" class="text-sm font-semibold leading-6 text-black py-4">{{ .label }}</a>
-          </li>
-          {{ end }}
-
-          {{ end }}
-          <!-- End Hugo Template Logic for Mobile Menu -->
-          <li class="mt-10">
-            <a href="{{ .Site.Data.navigation.call_to_action_link }}" class="primary-button !block !text-center">{{ .Site.Data.navigation.call_to_action_text }}</a>
-          </li>
-      </ul>
-  </nav>
+  </header>
 </div>
-</header>
 <script>
   const mobileMenu = document.getElementById('mobileMenu');
   const closeButton = document.getElementById('closeButton');
