--- a/layouts/partials/page-builder/hero.html
+++ b/layouts/partials/page-builder/hero.html
@@ -1,20 +1,20 @@
 <div>
-    <div class="relative isolate overflow-hidden pt-14">
+    <div class="relative isolate overflow-hidden pt-14 {{ if index .sectionData "full_screen" }}h-screen{{else}}h-[70vh]{{end}}">
         {{ $color := index .sectionData "overlayColor" }}
         {{ if $color }}
         <div class="absolute left-0 right-0 bottom-0 top-0" style="background-color: {{ $color | safeCSS }}"></div>
         {{ end }}
       <img src="{{ index .sectionData "image" }}" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover">
-      <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56 relative z-10">
+      <div class="mx-auto max-w-2xl items-center flex h-full relative z-10">
         <div class="text-center content">
           <h1 class="text-4xl tracking-tight sm:text-6xl" style="color:{{ index .sectionData "headingColor" }}">{{ index .sectionData "heading" }}</h1>
           <div class="mt-6" style="color:{{ index .sectionData "bodyColor" }}">{{ index .sectionData "body" | markdownify }}</div>
           {{ if index .sectionData "enable_quick_search" }}
-          <div class="max-w-3xl justify-center flex mx-auto mt-10">
+          <div class="max-w-4xl justify-center flex mx-auto mt-10{{ if index .sectionData "universal_quick_search" }}{{else}}px-4{{end}}">
             <script>
               document.currentScript.replaceWith(ihfKestrel.render({
                 "component": "quickSearchWidget",
-                "style": "universal"
+                "style": "{{ if index .sectionData "universal_quick_search" }}universal{{else}}horizontal{{end}}"
               }));
             </script>
           </div>
@@ -26,5 +26,6 @@
           {{ end }}
         </div>
       </div>
+
     </div>
 </div>
