--- a/static/css/globals.css
+++ b/static/css/globals.css
@@ -1,6 +1,6 @@
 * {
-    font-family: 'Roboto', sans-serif;
-  font-weight: 300;
+    font-family: 'Raleway', sans-serif;
+  font-weight: 400;
 
 }
 
