--- a/layouts/partials/global/seo.html
+++ b/layouts/partials/global/seo.html
@@ -1,7 +1,7 @@
-{{- $seo := .Site.Data.profile.search_engine_optimization -}}
+{{- $seo := .Site.Data.profile.contact_information.seo -}}
 {{- $profile := .Site.Data.profile }}
 {{- $logo := .Site.Data.appearance.branding.logo -}}
-{{- $favicon := .Site.Data.appearance.branding.favicon -}}
+{{- $favicon := .Site.Data.branding.branding_favicon -}}
 {{- $fallBackDesc := .Params.body | truncate 170 -}}
 {{- $summary := .Summary | truncate 170 -}}
 {{- $icons := .Site.Data.appearance.icons -}}
@@ -9,11 +9,13 @@
 <link rel="alternate" href="{{ .Permalink }}" hreflang="en-us" />
 <meta property="og:type" content="{{ if .Params.is_post }}article{{ else }}website{{ end }}"/>
 <meta property="og:locale" content="en_US" />
+
 {{ if .Params.search_engine_optimization.no_index }}
 <meta name="robots" content="noindex, nofollow" />
 {{ else }}
 <meta name="robots" content="index, follow" />
 {{ end }}
+
 {{- if $.IsHome -}}
 <!-- HOME PAGE SEO -->
 <title>{{ $seo.title_tag }}</title>
@@ -47,25 +49,12 @@
 <meta property="article:published_time" content={{ .Date.Format "2006-01-02" | safeHTML }} />
 {{- end }} <!-- End Home Statement -->
 
-<link rel="apple-touch-icon" sizes="152x152" href="{{ $icons.onefivetwo | absURL }}" />
-<link rel="apple-touch-icon" sizes="144x144" href="{{ $icons.onefourfour | absURL }}" />
-<link rel="apple-touch-icon" sizes="120x120" href="{{ $icons.onetwotwo | absURL }}" />
-<link rel="apple-touch-icon" sizes="114x114" href="{{ $icons.oneonefour | absURL }}" />
-<link rel="apple-touch-icon" sizes="180x180" href="{{ $icons.oneeightzero | absURL }}" />
-<link rel="apple-touch-icon" sizes="72x72" href="{{ $icons.seventwo | absURL }}" />
-<link rel="apple-touch-icon" href="{{ $favicon | absURL }}" />
-<link rel="shortcut icon" href="{{ $favicon | absURL }}" />
+<link rel="shortcut icon" href="{{ $favicon }}" />
 <link rel="canonical" href="{{ .Permalink }}" />
 <meta name="twitter:site" content="@{{ .Site.Data.profile.search_engine_optimization.twitter_card.twitter_username }}">
 
-{{ if .Params.featured_image }}
-<meta property="og:image" content="{{ .Params.featured_image | absURL }}" />
-<meta name="twitter:image" content="{{ .Params.featured_image | absURL }}" />
-<meta name="twitter:card" content="summary_large_image">
-{{ end }}
-
-{{ if .Params.photos.gallery }}
-<meta property="og:image" content="{{ index .Params.photos.gallery 0 | absURL }}" />
-<meta name="twitter:image" content="{{ index .Params.photos.gallery 0 | absURL }}" />
+{{ if .Params.thumbnail }}
+<meta property="og:image" content="{{ .Params.thumbnail }}" />
+<meta name="twitter:image" content="{{ .Params.thumbnail }}" />
 <meta name="twitter:card" content="summary_large_image">
 {{ end }}
