--- a/layouts/partials/global/seo.html
+++ b/layouts/partials/global/seo.html
@@ -10,7 +10,7 @@
 <meta property="og:type" content="{{ if .Params.is_post }}article{{ else }}website{{ end }}"/>
 <meta property="og:locale" content="en_US" />
 
-{{ if .Params.search_engine_optimization.no_index }}
+{{ if .Params.no_index }}
 <meta name="robots" content="noindex, nofollow" />
 {{ else }}
 <meta name="robots" content="index, follow" />
@@ -33,15 +33,15 @@
 <meta property="og:url" content="{{ .Permalink }}" />
 {{ else }}
 <!-- TITLE FOR PAGES -->
-{{ with .Params.search_engine_optimization.title_tag }}<title>{{ . }}</title>{{ else }}<title>{{ .Title }} | {{ $profile.company_name }}</title>{{ end }}
-{{ with .Params.search_engine_optimization.title_tag }}<meta property="og:title" content="{{ . }}" />{{ else }}<meta property="og:title" content="{{ .Title }} | {{ $profile.company_name }}" />{{ end }}
-{{ with .Params.search_engine_optimization.title_tag }}<meta name="twitter:title" content="{{ . }}" />{{ else }}<meta name="twitter:title" content="{{ .Title }} | {{ $profile.company_name }}" />{{ end }}
+{{ with .Params.title_tag }}<title>{{ . }}</title>{{ else }}<title>{{ .Title }} | {{ $profile.company_name }}</title>{{ end }}
+{{ with .Params.title_tag }}<meta property="og:title" content="{{ . }}" />{{ else }}<meta property="og:title" content="{{ .Title }} | {{ $profile.company_name }}" />{{ end }}
+{{ with .Params.title_tag }}<meta name="twitter:title" content="{{ . }}" />{{ else }}<meta name="twitter:title" content="{{ .Title }} | {{ $profile.company_name }}" />{{ end }}
 <meta name="application-name" content="{{ $profile.company_name }}" />
 <meta property="og:site_name" content="{{ $profile.company_name }}" />
 <!-- DESCRIPTION -->
-{{ with .Params.search_engine_optimization.meta_description | default $fallBackDesc | default $summary }}<meta name="description" content="{{ . }}" />{{ end }} 
-{{ with .Params.search_engine_optimization.meta_description | default $fallBackDesc | default $summary }}<meta property="og:description" content="{{ . }}" />{{ end }}
-{{ with .Params.search_engine_optimization.meta_description | default $fallBackDesc | default $summary }}<meta name="twitter:description" content="{{ . }}" />{{ end }}
+{{ with .Params.meta_description | default $fallBackDesc | default $summary }}<meta name="description" content="{{ . }}" />{{ end }} 
+{{ with .Params.meta_description | default $fallBackDesc | default $summary }}<meta property="og:description" content="{{ . }}" />{{ end }}
+{{ with .Params.meta_description | default $fallBackDesc | default $summary }}<meta name="twitter:description" content="{{ . }}" />{{ end }}
 {{ end }}
 
 {{- if .Params.is_post }}
@@ -51,7 +51,6 @@
 
 <link rel="shortcut icon" href="{{ $favicon }}" />
 <link rel="canonical" href="{{ .Permalink }}" />
-<meta name="twitter:site" content="@{{ .Site.Data.profile.search_engine_optimization.twitter_card.twitter_username }}">
 
 {{ if .Params.thumbnail }}
 <meta property="og:image" content="{{ .Params.thumbnail }}" />
