--- a/layouts/index.html
+++ b/layouts/index.html
@@ -175,7 +175,7 @@
     <div class="absolute left-0 right-0 bottom-0 top-0 z-10" style="background-color:{{ .background_image_overlay | safeCSS }}"></div>
     <div>
         <div class="container mx-auto relative z-20">
-            <div class="md:flex md:items-center">
+            <div class="md:flex md:items-center gap-10">
                 <div class="md:w-1/2">
                     <div class="content" style="{{ if .body_color }}color:{{ .body_color }}{{ end }}">{{.body |
                         markdownify }}</div>
