--- a/layouts/office/single.html
+++ b/layouts/office/single.html
@@ -8,34 +8,34 @@
                         <img class="h-full w-ful" src="{{ .Params.image }}" alt="{{ .Params.title }}">
                       </div>
                     </div>
-                    <dl class="mt-10 grid grid-cols-2 gap-5 content">
-                      <div>
-                        <dt class="text-sm font-semibold leading-6 text-gray-600">Email</dt>
-                        <dd class="font-bold leading-10 tracking-tight text-gray-900"><a href="mailto:{{ .Params.contact.email }}">{{ .Params.contact.email }}</a></dd>
-                      </div>
-                      <div>
-                        <dt class="text-sm font-semibold leading-6 text-gray-600">Phone</dt>
-                        <dd class="font-bold leading-10 tracking-tight text-gray-900"><a href="tel:{{ .Params.contact.direct }}">{{ .Params.contact.direct }}</a></dd>
-                      </div>
-                      <div>
-                        <dt class="text-sm font-semibold leading-6 text-gray-600">Office</dt>
-                        <dd class="font-bold leading-10 tracking-tight text-gray-900"><a href="tel:{{ .Params.contact.office }}">{{ .Params.contact.office }}</a></dd>
-                      </div>
-                      <div>
-                        <dt class="text-sm font-semibold leading-6 text-gray-600">Address</dt>
-                        <dd class="font-bold leading-10 tracking-tight text-gray-900">{{ .Params.address.street }}</dd>
-                      </div>
-                    </dl>
             </div>
             <div class="md:w-1/2">
                 <div class="content">
-                    <div class="text-base leading-7 text-gray-700 lg:max-w-lg">
+                    <div class="text-base leading-7 text-gray-700 lg:max-w-lg border-b pb-10">
                       <p class="text-base font-semibold leading-7 accent">{{ .Params.position }}</p>
-                      <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">{{ .Params.title }}</h1>
+                      <h1 class="mt-2 text-3xl tracking-tight text-gray-900 sm:text-4xl">{{ .Params.title }}</h1>
                       <div class="max-w-xl mt-10">
                           {{ .Content }}
                       </div>
                     </div>
+                    <dl class="mt-10 grid grid-cols-2 gap-5 content">
+                      <div>
+                        <dt class="text-sm font-semibold leading-6 text-gray-600">Email</dt>
+                        <dd class="leading-10 tracking-tight text-gray-900"><a href="mailto:{{ .Params.contact.email }}">{{ .Params.contact.email }}</a></dd>
+                      </div>
+                      <div>
+                        <dt class="text-sm font-semibold leading-6 text-gray-600">Phone</dt>
+                        <dd class="leading-10 tracking-tight text-gray-900"><a href="tel:{{ .Params.contact.direct }}">{{ .Params.contact.direct }}</a></dd>
+                      </div>
+                      <div>
+                        <dt class="text-sm font-semibold leading-6 text-gray-600">Office</dt>
+                        <dd class="leading-10 tracking-tight text-gray-900"><a href="tel:{{ .Params.contact.office }}">{{ .Params.contact.office }}</a></dd>
+                      </div>
+                      <div>
+                        <dt class="text-sm font-semibold leading-6 text-gray-600">Address</dt>
+                        <dd class="leading-10 tracking-tight text-gray-900">{{ .Params.address.street }}</dd>
+                      </div>
+                    </dl>
                   </div>
             </div>
         </div>
