--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,6 +18,10 @@
 {{ partial "page-builder/featured-panel" (dict "sectionData" .) }}
 {{ end }}
 
+{{ if eq "code" .type }}
+{{ partial "page-builder/code" (dict "sectionData" .) }}
+{{ end }}
+
 
 {{ if eq "testimonial_section" .type }}
 {{ partial "page-builder/testimonials" (dict "sectionData" .) }}
