--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -51,7 +51,7 @@
                         About
                     </h2>
                     <div class="content">
-                        {{ $footer.about }}
+                        {{ $footer.about | markdownify }}
                     </div>
                 </div>
             </div>
