--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -31,9 +31,9 @@
                 <h2 class="font-medium">
                     Contact Information
                 </h2>
-                <ul class="mt-4">
+                <div class="mt-4">
                     {{ partial "templates/contact" . }}
-                </ul>
+                </div>
             </div>
             <div>
                 <h2 class="font-medium">
