--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -7,7 +7,7 @@
 
 
 {{- $colors := .Site.Data.appearance -}}
-<script src="https://cdn.tailwindcss.com"></script>
+<!-- <script src="https://cdn.tailwindcss.com"></script> -->
 <!-- SCHEMA -->
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
@@ -51,6 +51,7 @@
 
 <!-- STYLESHEETS AND RESOURCES-->
 <link rel="stylesheet" href="/css/globals.css">
+<link rel="stylesheet" href="/assets/css/style.css">
 
 
 <link
