--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -110,7 +110,7 @@
   });
 </script>
 <div class="gtranslate_wrapper"></div>
-<script>window.gtranslateSettings = {"default_language":"en","languages":["en","vi"],"wrapper_selector":".gtranslate_wrapper","switcher_horizontal_position":"right"}</script>
+<script>window.gtranslateSettings = {"default_language":"en","languages":["en","vi"],"wrapper_selector":".gtranslate_wrapper","switcher_horizontal_position":"right","alt_flags":{"en":"usa"}}</script>
 <script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
 </body>
 </html>
