--- a/layouts/partials/page-builder/featured-grid.html
+++ b/layouts/partials/page-builder/featured-grid.html
@@ -11,7 +11,7 @@
             <div class="flex flex-col items-start">
             {{ with .image }}
             <div class="relative w-full">
-                <img src="{{ . }}" alt="" class="aspect-[16/9] w-full rounded-sm bg-gray-100 object-cover sm:aspect-[2/1] lg:aspect-[3/2]">
+                <img src="{{ . }}" alt="{{ .alt_text }}" class="aspect-[16/9] w-full rounded-sm bg-gray-100 object-cover sm:aspect-[2/1] lg:aspect-[3/2]">
               </div>
             {{ end }}
                 <div class="max-w-xl mt-6 content">
