--- a/layouts/partials/page-builder/featured-panel.html
+++ b/layouts/partials/page-builder/featured-panel.html
@@ -79,7 +79,7 @@
             <div class="relative isolate flex justify-center items-center text-center h-full overflow-hidden px-8 py-40 sm:py-48 lg:py-32 rounded-sm">
                 <a href="{{ .button_link }}">
                 {{ with .image }}
-                <img src="{{ . }}" alt="{{ .alt_text }}" class="absolute inset-0 -z-10 h-full w-full object-cover">
+                <img src="{{ . }}" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover">
                 <div class="absolute top-0 bottom-0 left-0 right-0 bg-gray-900 opacity-50 group-hover:opacity-50 transition-opacity"></div>
                 {{ end }}
                 {{ with .body }}
