--- a/layouts/partials/page-builder/featured-grid.html
+++ b/layouts/partials/page-builder/featured-grid.html
@@ -9,9 +9,9 @@
             <div class="grid grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-{{ with index .sectionData "column_number" }}{{ . }}{{ else }}3{{ end }}">
             {{ range index .sectionData "featured_blocks" }}
             <div class="flex flex-col items-start">
-            {{ with .image }}
+            {{ if .image }}
             <div class="relative w-full">
-                <img src="{{ . }}" alt="{{ .alt_text }}" class="aspect-[16/9] w-full rounded-sm bg-gray-100 object-cover sm:aspect-[2/1] lg:aspect-[3/2]">
+                <img src="{{ .image }}" alt="{{ .alt_text }}" class="aspect-[16/9] w-full rounded-sm bg-gray-100 object-cover sm:aspect-[2/1] lg:aspect-[3/2]">
               </div>
             {{ end }}
                 <div class="max-w-xl mt-6 content">
