--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -75,7 +75,7 @@
       </div>
       
       <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-        <a href="{{ .Site.Data.navigation.call_to_action_link }}" class="primary-button">{{ .Site.Data.navigation.call_to_action_text }}</a>
+        <a href="{{ .Site.Data.navigation.call_to_action_link | absURL }}" class="primary-button">{{ .Site.Data.navigation.call_to_action_text }}</a>
       </div>
     </nav>
     <!-- Mobile Menu -->
