--- a/layouts/sitemap/sitemap.html
+++ b/layouts/sitemap/sitemap.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="section">
-    <div class="max-w-sm mx-auto content text-center">
+    <div class="max-w-sm mx-auto text-center">
         <h2 class="h3 text-bold border-b">Sitemap</h2>
         <ul class="grid grid-cols-1 gap-2">
             {{ range $.Site.Pages.ByTitle }}
